<?xml version="1.0" encoding="utf-8" standalone="no"?>
<!--
  StockAnalyze for Android
      Copyright (C)  2011 Tomas Vondracek.
  
      This program is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
  
      This program is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
	<string name="app_name">StockGrid</string>
	<string name="appAuthor">Tomáš Vondráček\ntomas.vondracek@gmail.com</string>
	<string name="appWww">http://tomas-vondracek.net</string>
	<string name="feedback">Feedback</string>

    <string name="portfolioContextMenuSubtract"/>
    <string name="portfolioContextMenuAddMore">Add More</string>
    <string name="portfolioContextMenuRemove">Remove</string>
    <string name="portfolioContextMenuStockDetail">View Stock Detail</string>
    <string name="PortfolioContextViewDetail">Portfolio Detail</string>
    <string name="addStockItemToFavourite">Add to Favourites</string>
    <string name="addStockItemToPortfolio">Add to Portfolio</string>
    <string name="stockItemView">View Detail</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
    <string name="SearchTextView">Type a ticker or name</string>
	<string name="update_succes">The data has been successfully updated!</string>
	<string name="update_fail">
	An error occurred while updating the data!
	Check your internet connectivity.
	</string>
	<string name="noOfflineData">No off-line data available, downloading…</string>
	<string name="NoRefresh">"No data was refreshed."</string>
	<string name="failed_price_update">Failed to update the price!</string>
	<string name="loading">Loading…</string>
	<string name="NoInternet">You need internet connection do get latest data!</string>
	<string name="LabelDetailMin">52 week Minimum</string>
	<string name="LabelDetailMax">52 week Maximum</string>
	<string name="LabelDetailVolume">Volume</string>
	<string name="NoStockSelected">There is no stock selected. Please select one or add new one.</string>
	<string name="FailedGetNews">"Failed to get news."</string>
	<string name="NoNews">"There are no updated news."</string>
	<string name="InvalidData">No data</string>
	<string name="Statistics">Statistics</string>
	<string name="pieces">pcs</string>
	<string name="share">Sdílet</string>
	<string name="viewInBrowser">Zobrazit v prohlížeči</string>
	
	<string name="homeStockList">Stocks</string>
	<string name="homeNews">Market News</string>
	<string name="homeCurrencies">World Currencies</string>
	<string name="homeIndeces">Indeces</string>
	<string name="homeMyPortfolio">Portfolio</string>
	<string name="homeChartTitle">Market Chart:</string>
	<string name="disclaimerTitle">Disclaimer:</string>
	<string name="disclaimerText">Note: All information provided applications are provided free of charge and does not in any way as a particular investment or trading recommendations. The use of this information is only a matter of responsibility and discretion of the user, as well as business decisions. The operator of the application is not responsible for specific decisions of individual users. The operator is not responsible for the failure of application, nor errors in the data. All resources are for information only. The operator of application or individual authors are not registered broker or investment advisor.
Never let go to the trades, which nature you do not fully understand. Trading and investing in financial instruments is highly risky.</string>
	<string name="disclaimerShortText">Information is provided "as is" and solely for informational purposes, not for trading purposes or advice, and may be delayed.</string>
	<string name="dataUpdating">Updating data</string>
	<string name="dataUpdated">Updated data</string>
	<string name="lastDataUpdated">Last Update Time:</string>
	<string name="noDataUpdated">No Data Update</string>
	
	<string name="portfolioTickerLabel">Stock Ticker</string>
	<string name="portfolioCountLabel">Count</string>
	<string name="portfolioPriceLabel">Price per Stock</string>
	<string name="portfolioMarketLabel">Market</string>
	<string name="portfolioDefaultStockCount">100</string>
	<string name="portfolioValidationMessage">Fill all fields with correct values</string>
	<string name="portfolioFailedToAdd">Failed to add stock to your portfolio!</string>
	<string name="portfolioDealPrompt">Deal</string>
	<string name="portfolioDealFee">Fee</string>
	<string name="portfolioDealTotalValue">Total Value</string>
    <string-array name="portfolioDealArray">
        <item>Buy</item>
        <item>Sell</item>
    </string-array>
    <string name="portfolioListHeader1">Stock Name\nTicker</string>
    <string name="portfolioListHeader2">Total Value\nChange</string>
    <string name="portfolioListHeader3">Stock Price\nChange</string>
    <string name="portfolioFooterSum">Sum:"</string>
    <string name="AddPortfolioItemActivityTitle">Add to Portfolio</string>
    <string name="portfolioPickStock">Pick Stock</string>
    <string name="portfolioBalance">Balance:</string>
    <string name="portfolioBuyPrice">Buy price</string>
    <string name="portfolioSellPrice">Sell price</string>
    <string name="noPortfolioItems">No portfolio items…</string>
    
    <string name="prefPermanentNotification">Enable to show permanent notification for quick access.</string>
    <string name="prefUpdateNotification">Show notification when updating data.</string>
    <string name="prefPortfolioIncludeFeeSummary">Check to subtract fees from portfolio values</string>
    
    <string name="prefGroupPortfolio">Portfolio</string>
    <string name="prefGroupNotifications">Notifications</string>
    <string name="prefGroupAutoUpdates">Automatic Updates</string>
    <string name="prefPortfolioIncludeFeeTitle">Include Fee</string>
    <string name="prefAutoBackgroundUpdatesTitle">Background Updates</string>
    <string name="prefAutoUpdateIntervalTitle">Update Interval</string>
    <string name="prefNotifUpdateTitle">Update Notification</string>
    <string name="prefNotifPermaTitle">Permanent Notification</string>
	<string name="prefFullArticleSummary">Download full article content for off-line use.</string>
	<string name="prefFullArticle">Download articles.</string>
	<string name="prefGroupNews">News</string>
    
    <string name="AppPreferencesActivityTitle">Application Preferences</string>
    
    <string-array name="prefListUpdateIntervalEntries">
        <item>15 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>2 Hours</item>
        <item>6 Hours</item>
        <item>12 Hours</item>
    </string-array>
    <string-array name="prefListUpdateIntervalValues">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>360</item>
        <item>720</item>
    </string-array>
    
    <string name="prefBackgroundUpdate">Enable background data updates.</string>
    <string name="prefUpdateInterval">Set time interval between updates.</string>
    
    <string name="appAbout">About</string>
    
    <!-- names for activities to display in ActionBar -->
    <string name="activityStockList">Stocks</string>
    <string name="activityStockDetail">Stock Detail</string>
    <string name="activityIndexDetail">Index Detail</string>
    <string name="activityPortfolio">Portfolio</string>
    <string name="activityPortfolioDetail">Detail</string>
    <string name="activityNews">News</string>
    <string name="activityCurrencies">Currencies</string>
    <string name="activityStockChart">Stock Chart</string>
    <string name="chartDay">Day</string>
    <string name="chart5days">1 Week</string>
    <string name="chart10days">2 Weeks</string>
    <string name="chartMonth">1 Month</string>
    <string name="chart3months">3 Months</string>
    <string name="chart6months">6 Months</string>
    <string name="chartYear">Year</string>
    
    <string name="chartDayShort">1d</string>
    <string name="chart5daysShort">1w</string>
    <string name="chart10daysShort">2w</string>
    <string name="chartMonthShort">1m</string>
    <string name="chart3monthsShort">3m</string>
    <string name="chart6monthsShort">6m</string>
    <string name="chartYearShort">1y</string>
    
    <string name="failedGetChart">Failed to get data for chart…</string>
    
    <string name="working">Processing…</string>
    
    <string name="pickMarket">Pick Market</string>
    <string name="pickStock">Pick Stock</string>
    <string name="retry">Try again</string>
    <string name="chart">graf</string>
    <string name="save">Save</string>

	<string name="addStockItem">Add Stock</string>
	<string name="addStockHint">Enter ticker or name</string>
	<string name="addedStock">added…</string>
	<string name="addStockItemNotFound">Stock wasn\'t found…</string>
	<string name="stockHide">Remove stock</string>

	<string name="loadingMarkets">Updating stock list…</string>
	<string name="loadingMarketsFailed">Updating stock list failed. Try it again later.</string>
	<string name="selectMarkets">Select markets</string>
	<string name="savingMarkets">Saving markets settings</string>

	<string name="diag">Diagnostics</string>
</resources>
