<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2011 Tomas Vondracek.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v2.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
  
  Contributors:
      Tomas Vondracek
-->
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/groupLength">
	    <item android:id="@+id/chart5days" android:title="@string/chart5days"></item>
	    <item android:id="@+id/chart10days" android:title="@string/chart10days"></item>
	    <item android:id="@+id/chartMonth" android:title="@string/chartMonth"></item>
	    <item android:id="@+id/chart3months" android:title="@string/chart3months"></item>
	    <item android:id="@+id/chart6months" android:title="@string/chart6months"></item>
	    <item android:id="@+id/chartYear" android:title="@string/chartYear"></item>
    </group>
</menu>
