<?xml version="1.0" encoding="utf-8"?>
<!--
  StockAnalyze for Android
      Copyright (C)  2011 Tomas Vondracek.
  
      This program is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
  
      This program is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
<TableLayout
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:layout_margin="5dp"
	android:padding="5dp"
	android:stretchColumns="1">

	<TableRow>
		<TextView android:id="@+id/TextViewPortfolioDeal" 
			android:text="@string/portfolioDealPrompt" 
			style="@style/tableItem">
		</TextView>
		
		<Spinner android:id="@+id/portfolioAddSpinnerDeal" 
			style="@style/tableItem"
			android:focusable="true"
			android:prompt="@string/portfolioDealPrompt"
			android:entries="@array/portfolioDealArray">
		</Spinner>
	
	</TableRow>
	<TableRow>
		<TextView android:id="@+id/TextView01" 
			android:text="@string/portfolioTickerLabel" 
			android:editable="false"
			style="@style/tableItem">
		</TextView>
		<EditText android:id="@+id/portfolioAddTicker"
			style="@style/tableItem" 
			android:text="@+id/EditText01">
		</EditText>
	</TableRow>
	<TableRow>
		<TextView android:id="@+id/TextView04"
			android:text="@string/portfolioMarketLabel" 
			style="@style/tableItem">
		</TextView>
		<EditText android:id="@+id/portfolioAddMarket" 
			android:editable="false" 
			android:text="@+id/TextView05"
			style="@style/tableItem">
		</EditText>
	</TableRow>
	<TableRow>
		<TextView android:id="@+id/TextView02" 
			android:text="@string/portfolioCountLabel" 
			style="@style/tableItem" >
		</TextView>
		<EditText android:id="@+id/portfolioAddCount"
			style="@style/tableItem" 
			android:inputType="numberDecimal"
			android:text="@string/portfolioDefaultStockCount">
		</EditText>
	</TableRow>
	<TableRow>
		<TextView android:id="@+id/TextView03" 
			android:text="@string/portfolioPriceLabel" 
			style="@style/tableItem">
		</TextView>
		<EditText android:id="@+id/portfolioAddPrice" 
			style="@style/tableItem"
			android:inputType="number">
		</EditText>
	</TableRow>
	<TableRow>
		<TextView android:id="@+id/TextView04" 
			android:text="@string/portfolioDealFee" 
			style="@style/tableItem">
		</TextView>
		<EditText android:id="@+id/portfolioAddDealFee" 
			style="@style/tableItem"
			android:inputType="number">
		</EditText>
	</TableRow>
	<TableRow>
		<TextView android:id="@+id/TextView05" 
			android:text="@string/portfolioDealTotalValue" 
			style="@style/tableItem">
		</TextView>
		<TextView android:id="@+id/portfolioAddTotalValue" 
			style="@style/tableItem"
			android:padding="12dp"
			android:inputType="number">
		</TextView>
	</TableRow>
	<TableRow>
		<Button android:id="@+id/portfolioAddButton"
			android:layout_column="1"
			style="@style/tableItem"
			android:text="@string/addStockItemToPortfolio"
			android:layout_marginTop="8dip"/>
	</TableRow>
</TableLayout>
</ScrollView>
