<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
<RelativeLayout
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:padding="8dp" 
  android:layout_margin="8dp" >
  
  <ImageView android:id="@+id/aboutLogo"
	style="@style/aboutContent"
  	android:src="@drawable/ic_launcher"
  	android:layout_alignParentTop="true"
  	android:layout_alignParentLeft="true" />
  <TextView android:id="@+id/aboutTitle"
  	android:text="@string/app_name"
	style="@style/aboutContent"
  	android:layout_toRightOf="@+id/aboutLogo" 
  	android:layout_alignParentTop="true"
  	android:layout_alignBottom="@+id/aboutLogo"
  	android:gravity="center"/>
  <TextView android:id="@+id/aboutVersion"
  	style="@style/aboutContent"
  	android:text="0.9.1"
  	android:layout_toRightOf="@+id/aboutTitle"
  	android:layout_alignParentTop="true"
  	android:layout_alignBottom="@+id/aboutLogo"
  	android:gravity="center" />
  <TextView android:id="@+id/aboutAuthor"
  	style="@style/aboutContent"
  	android:text="@string/appAuthor"
  	android:layout_width="fill_parent"
  	android:layout_alignParentLeft="true"
  	android:layout_below="@+id/aboutLogo"
  	android:gravity="center"/>
  <TextView android:id="@+id/aboutWww"
  	style="@style/aboutContent"
  	android:text="@string/appWww"
  	android:layout_width="fill_parent"
  	android:gravity="center"
  	android:layout_alignParentLeft="true"
  	android:layout_below="@+id/aboutAuthor"/>
  <TextView android:id="@+id/aboutDisclaimerTitle"
	style="@style/groupboxHeader"
	android:text="@string/disclaimerTitle"
 	android:layout_alignLeft="@+id/aboutAuthor"
 	android:layout_below="@+id/aboutWww"/>
  <LinearLayout android:id="@+id/DetailLinearSummary"
	style="@style/groupboxBody" 
	android:orientation="vertical"
 	android:layout_width="fill_parent"
 	android:layout_alignLeft="@+id/aboutAuthor"
 	android:layout_below="@+id/aboutDisclaimerTitle">
	<TextView android:id="@+id/aboutDisclaimer"
	 	style="@style/aboutContent"
	 	android:text="@string/disclaimerText"/>
 	</LinearLayout>
</RelativeLayout>
</ScrollView>