<?xml version="1.0" encoding="utf-8"?>
<!--
  StockAnalyze for Android
      Copyright (C)  2011 Tomas Vondracek.
  
      This program is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
  
      This program is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/settings" 
	    android:id="@+id/menu_app_settings"
	    android:icon="@drawable/ic_menu_settings"
	    android:orderInCategory="0"
        android:showAsAction="never"/>
    
    <item android:id="@+id/menu_app_about"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/appAbout" 
        android:icon="@drawable/ic_menu_about"/>
    
    <item android:id="@+id/menu_app_pick_stock"
        android:orderInCategory="2"
        android:visible="false"
        android:showAsAction="never"
        android:title="@string/pickStock" 
        android:icon="@drawable/ic_menu_chart"/>
	<item android:id="@+id/menu_app_feedback"
		android:orderInCategory="3"
		android:showAsAction="never"
		android:title="@string/feedback"/>

</menu>
