<?xml version="1.0" encoding="utf-8"?>
<!--
  StockAnalyze for Android
      Copyright (C)  2011 Tomas Vondracek.
  
      This program is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
  
      This program is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:orientation="horizontal"
  android:layout_height="fill_parent">
  
	<TextView android:id="@+id/TextView01" 
		android:text="@string/portfolioListHeader1" 
		style="@style/listHeader" 
		android:layout_weight="1.2">
	</TextView>
	<TextView android:id="@+id/TextView02"  
		android:text="@string/portfolioListHeader2" 
		style="@style/listHeader"
		android:layout_weight="1">
	</TextView>
	<TextView android:id="@+id/TextView03" 
		android:text="@string/portfolioListHeader3" 
		style="@style/listHeader"
		android:layout_weight="1.1">
	</TextView>
</LinearLayout>
