<?xml version="1.0" encoding="utf-8"?>
<!--
  StockAnalyze for Android
      Copyright (C)  2011 Tomas Vondracek.
  
      This program is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
  
      This program is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <TableLayout
            xmlns:block="http://schemas.android.com/apk/res/cz.tomas.StockAnalyze"
            android:id="@+id/homeBlockTable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*" >

            <TableRow>

                <cz.tomas.StockAnalyze.ui.widgets.HomeBlockView
                    android:id="@+id/homeBlockStockList"
                    style="@style/homeBlock"
                    block:imageId="@drawable/ic_home_list"
                    block:target="cz.tomas.StockAnalyze.activity.StocksActivity"
                    block:textId="@string/homeStockList" />

                <cz.tomas.StockAnalyze.ui.widgets.HomeBlockView
                    android:id="@+id/homeBlockPortfolio"
                    style="@style/homeBlock"
                    block:imageId="@drawable/ic_home_portfolio"
                    block:target="cz.tomas.StockAnalyze.activity.PortfoliosActivity"
                    block:textId="@string/homeMyPortfolio" />
            </TableRow>

            <TableRow>

                <!-- <cz.tomas.StockAnalyze.ui.widgets.HomeBlockView -->
                <!-- android:id="@+id/homeBlockCurrencies" -->
                <!-- style="@style/homeBlock" -->
                <!-- block:textId="@string/homeCurrencies" -->
                <!-- block:imageId="@drawable/ic_globe" -->
                <!-- block:target="cz.tomas.StockAnalyze.activity.IndecesListActivity"/> -->

                <cz.tomas.StockAnalyze.ui.widgets.HomeBlockView
                    android:id="@+id/homeBlockIndeces"
                    style="@style/homeBlock"
                    block:imageId="@drawable/ic_home_indeces"
                    block:target="cz.tomas.StockAnalyze.activity.IndecesListActivity"
                    block:textId="@string/homeIndeces" />

                <cz.tomas.StockAnalyze.ui.widgets.HomeBlockView
                    android:id="@+id/homeBlockNews"
                    style="@style/homeBlock"
                    block:imageId="@drawable/ic_home_rss"
                    block:target="cz.tomas.StockAnalyze.activity.NewsActivity"
                    block:textId="@string/homeNews" />
            </TableRow>

            <View
                android:id="@+id/homeSeparator1"
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_marginBottom="2dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="2dip"
                android:background="@drawable/bg_header" />

            <TextView
                android:id="@+id/home_chart_title"
                style="@style/titleText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/homeChartTitle"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/home_chart"
                style="@style/homeBlock"
                android:contentDescription="@string/chart"
                android:visibility="gone" />

            <include
                style="@style/homeBlock"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                layout="@layout/part_chart_with_header" />

            <TextView
                style="@style/subText"
                android:inputType="textMultiLine"
                android:padding="12dp"
                android:singleLine="false"
                android:text="@string/disclaimerShortText" />
        </TableLayout>
    </ScrollView>

</LinearLayout>