<?xml version="1.0" encoding="utf-8"?>
<TableLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:paddingLeft="36dp">
    <TableRow android:id="@+id/tableRow1" 
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content">
    	<TextView 
    		android:text="@string/portfolioBalance"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"/>
    	<TextView android:id="@+id/portfolioGroupBalance"
    		android:layout_weight="1"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow android:id="@+id/tableRow2" 
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content">
    	<TextView 
    		android:text="@string/portfolioBuyPrice"
    		android:layout_weight="1"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"/>
    	<TextView android:id="@+id/portfolioGroupBuyPrice"
    		android:layout_weight="1"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow android:id="@+id/tableRow3" 
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content">
    	<TextView 
    		android:text="@string/portfolioSellPrice"
    		android:layout_weight="1"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"/>
    	<TextView android:id="@+id/portfolioGroupSellPrice"
    		android:layout_weight="1"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"/>
    </TableRow>
    
</TableLayout>
