<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:id="@+id/DetailLinear"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical">
	<TextView android:text="@+id/TextView01" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:id="@+id/txtDetailHeader"></TextView>

	<TextView android:id="@+id/txtDetailDate"
		android:layout_height="wrap_content" android:layout_width="fill_parent"></TextView>
	<TextView android:text="@+id/TextView01"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:id="@+id/txtDetailName" android:textStyle="bold"
		android:gravity="center" android:textSize="20dip"
		android:layout_margin="4dip"></TextView>

	<TextView android:layout_height="wrap_content" android:text="@string/failed_price_update"
		style="@style/moneyText"
		android:ellipsize="marquee" android:fadeScrollbars="true"
		android:textStyle="bold" android:id="@+id/txtDetailClosingPrice"
		android:layout_margin="2dip" android:gravity="center"
		android:textSize="24dip" android:lines="1" 
		android:layout_width="fill_parent">
	</TextView>
	<TextView android:layout_height="wrap_content" android:text="change"
		style="@style/moneyText"
		android:id="@+id/txtDetailChange"
		android:layout_margin="2dip" android:gravity="center"
		android:textSize="22dip" android:lines="1" 
		android:layout_width="fill_parent">
	</TextView>
	<TableLayout android:layout_height="fill_parent"
		android:layout_width="fill_parent" android:stretchColumns="1"
		android:shrinkColumns="0">
		android:id="@+id/tableDetailData"
		android:layout_margin="5dip">
		<TableRow android:id="@+id/TableDetailRow01"
			android:layout_width="fill_parent" android:layout_height="fill_parent">
			<TextView android:layout_height="fill_parent"
				android:layout_width="fill_parent" android:id="@+id/lblDetailMin"
				android:text="@string/LabelDetailMin" android:layout_marginRight="5dip"
				android:gravity="left" android:layout_marginLeft="2dip"></TextView>
			<TextView android:text="txtDetailClosingPriceyear_min" android:id="@+id/txtDetailMin"
				android:lines="1" android:layout_height="fill_parent"
				android:gravity="right" android:layout_marginRight="5dip"
				android:layout_gravity="right" android:layout_width="fill_parent"></TextView>
		</TableRow>
		<TableRow android:layout_height="wrap_content" android:id="@+id/tableDetailRow02"
			android:layout_width="fill_parent">
			<TextView android:layout_height="wrap_content" android:id="@+id/lblDetailMax"
				android:text="@string/LabelDetailMax"
				android:layout_marginRight="5dip"
				android:layout_width="fill_parent" android:gravity="left"
				android:layout_marginLeft="2dip"></TextView>
			<TextView android:text="year_max" android:id="@+id/txtDetailMax"
				android:lines="1" android:layout_height="fill_parent"
				android:gravity="right" android:layout_marginRight="5dip"
				android:layout_gravity="right" android:layout_width="fill_parent"></TextView>
		</TableRow>
		<TableRow android:layout_height="wrap_content" android:id="@+id/tableDetailRow03"
			android:layout_width="fill_parent">
			<TextView android:layout_height="wrap_content"
				android:id="@+id/lblDetailVolume"
				android:text="@string/LabelDetailVolume" 
				android:layout_marginRight="5dip"
				android:layout_width="fill_parent" 
				android:gravity="left"
				android:layout_marginLeft="2dip">
			</TextView>
			<TextView android:text="volume" android:id="@+id/txtDetailVolume"
				android:lines="1" 
				android:layout_height="fill_parent"
				android:gravity="right" 
				android:layout_marginRight="5dip"
				android:layout_gravity="right"
				android:layout_width="fill_parent">
			</TextView>
		</TableRow>
	</TableLayout>

</LinearLayout>
